# course-anika342

src/homework/01_data_types/: data_types.cpp  main.cpp
src/homework/02_expressions/: hwexpressions.cpp  hwexpressions.h  main  main.cpp
src/homework/03_decisions/: CMakeLists.txt  decisions.cpp  decisions.h  main.cpp
src/homework/04_repetition/: main  main.cpp  repetition.cpp  repetition.h
src/homework/05_functions/: func.cpp  func.h  main  main.cpp
src/homework/06_tic_tac_toe/: main.cpp  tic_tac_toe.cpp  tic_tac_toe.h  tic_tac_toe_3.cpp  tic_tac_toe_3.h  tic_tac_toe_4.cpp  tic_tac_toe_4.h  tic_tac_toe_manager.cpp  tic_tac_toe_manager.h
test/homework/01_data_types/: 01_data_types_tests.cpp
test/homework/02_expressions/: 02_expressions_tests.cpp
test/homework/03_decisions/: 03_decisions_tests.cpp
test/homework/04_repetition/: 04_iteration_tests.cpp
test/homework/05_functions/: 05_functions_tests.cpp
test/homework/06_tic_tac_toe/: tic_tac_toe_tests.cpp
