add_library(hw_03_library "decisions.cpp" "decisions.h")
add_executable(hw_03_exe "main.cpp" "decisions.cpp")



#include <iostream>
#include <math.h>

using name space std

int main ()
{

int numerical_Grade;
char letter_Grade;

cout<<"Welcome to my program";
cout<<"Conversion table";

if (numerical_Grade )

Else if ()
{

}


}

Switch (numerical_Grade)

{
    Case 1:
    cout<<"The student grade is: ";
    
    break;
}